Added dockerfile contents for multistage gradle + openjdk stages