@@ -1,2 +1,17 @@
-FROM openjdk:15.0.2-jdk-oraclelinux7
+FROM gradle:6.8.3-jdk15 AS build
 
+COPY --chown=gradle:gradle . /home/gradle/src
+
+WORKDIR /home/gradle/src
+
+RUN gradle build --no-daemon
+
+FROM openjdk:15-jre-slim
+
+EXPOSE 8080
+
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/github-actions-example.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app/github-actions-example.jar"]
